--- a/app/modules/default/views/scripts/index/test.phtml
+++ b/app/modules/default/views/scripts/index/test.phtml
@@ -40,12 +40,12 @@ require([
         }, 1000);*/
 
 
-/*        var sc = new SC();
+        var sc = new SC();
         sc.show();
 
         setTimeout(function(){
             //sc.show();
-        }, 5000);*/
+        }, 5000);
 
 /*        var o = new Overlay({
             domNode: 'lt'
@@ -61,12 +61,12 @@ require([
             }, 3000);*/
 
 
-        var t = Ajax.load('http://192.168.1.51/default/index/ajax', {
-            handleAs: 'text',
+/*        var t = Ajax.load('http://192.168.1.51/default/index/ajax', {
+            handleAs: 'json',
             overlay: new Overlay({
                 domNode: query('.container')[0]
             })
-        });
+        });*/
 
 
 
