--- a/app/modules/manager/views/scripts/tariffication/edit-tariff-info.ajax.phtml
+++ b/app/modules/manager/views/scripts/tariffication/edit-tariff-info.ajax.phtml
@@ -176,7 +176,7 @@ $tariff = $this->data;
                 <input type="hidden" name="tariff[message_enabled]" value="0"/>
                 <input type="checkbox" name="tariff[message_enabled]" id="edit-tariff-message-enabled"
                     <?=$tariff->getData('message_enabled') ? "checked=\"true\"" : ""; ?> value="1"
-                    <?$tariff->getData('used') ? "disabled=\"true\"" : "" ?>/>
+                    <?=$tariff->getData('used') ? "disabled=\"true\"" : "" ?>/>
                 <label for="edit-tariff-message-enabled" class="inline">Сообщения разрешены</label>
             </td>
             <td>
