--- a/app/modules/manager/views/scripts/billing/agreements2.phtml
+++ b/app/modules/manager/views/scripts/billing/agreements2.phtml
@@ -14,6 +14,7 @@ foreach($lineColl->getObjectsIterator() as $line){
 $linesStore = Zend_Json::encode($lineColl->toArray());
 $tariffsStore = Zend_Json::encode($tariffColl->toArray());
 $companiesStore = Zend_Json::encode($companyColl->toArray());
+
 ?>
 <?php
 $jScript = <<<JS
@@ -115,6 +116,9 @@ ContentPane, _WidgetBase, _WidgetsInTemplateMixin, _Container, _Contained, _Temp
 
         var contentNode = dom.byId('contentCompanies');
 
+        var contentPane = new ContentPane({
+            id: 'content'
+        }, contentNode);
 
 /*        var cp = new ContentPane({
             id: 'getOwners'
@@ -156,6 +160,7 @@ ContentPane, _WidgetBase, _WidgetsInTemplateMixin, _Container, _Contained, _Temp
         }
 
         // Компания владелец
+        // Контейнер
         var companyOwnerNode = declare("companyOwnerNode", [_WidgetBase, _Container, _TemplatedMixin], {
             templateString: dom.byId('company-owner-node-template').innerHTML,
             companyOwner: null,
@@ -172,32 +177,28 @@ ContentPane, _WidgetBase, _WidgetsInTemplateMixin, _Container, _Contained, _Temp
                 this.inherited(arguments);
                 this.containerNode = this.get('companyClientsNode');
                 var _dijit = this;
-
-                domClass.add(this.get('hideChildNode'), "hidden");
-                domClass.add(this.get('companyClientsNode'), "hidden");
-                domClass.remove(this.get('showChildNode'), "hidden");
-
                 on(this.get('companyClientsFilter'), 'a:click', function(event){
                     _dijit._companyClientsFilter(event.target);
                 })
             },
-
             postCreate: function(){
                 this._overlayAjax = new Overlay({
                     domNode: this.domNode
                 });
                 var _dijit = this;
-                var handler = on(this.get('uncoverCompanyClientsNodes'), 'click', function(event){
-                    _dijit._getCompanyClientsData().then(function(response){
+                // Первичная загрузка данных
+                var handler = on(this.get('showChildNode'), 'click', function(event){
+                    _dijit.fetchCompanyClients().then(function(response){
                         array.forEach(response.data, function(item){
                             _dijit.insertCompanyClientNode(item);
                         });
-                    }).then(function(){
-                        on(event.target, 'click', function(event){
-                            _dijit.toggleUncoverCompanyClientsNodes(event);
-                        });
                         setTimeout(function(){
-                           _dijit.toggleUncoverCompanyClientsNodes(event);
+                            query('button', _dijit.get('toggleChildNodes')).forEach(function(button){
+                                on(button, 'click', function(){
+                                    _dijit.toggleHandler(button);
+                                });
+                            });
+                            _dijit.toggleHandler(event.target);
                         }, _dijit._overlayAjax.delay);
                         handler.remove();
                     });
@@ -216,41 +217,23 @@ ContentPane, _WidgetBase, _WidgetsInTemplateMixin, _Container, _Contained, _Temp
                 if(dijitRegistry.byId(this._getCompanyClientId(item.id))) this.addChild(this._getCompanyClientId(item.id));
                 else this.addChild(new companyClientNode({companyClient: item, id: this._getCompanyClientId(item.id), options: options}));
             },
-            showChild:function(event){
-                domClass.toggle(event.target, "hidden");
-
-                //domClass.remove(this.get('hideChildNode'), "hidden");
-                //domClass.remove(this.get('companyClientsNode'), "hidden");
-            },
-            hideChild: function(event){
-
-            },
-            toggle: function(){
-                domClass.toggle(this.get('hideChildNode'), "hidden");
-                domClass.toggle(this.get('showChildNode'), "hidden");
-                domClass.toggle(this.get('companyClientsNode'), "hidden");
-            },
-            // Первичная загрузка данных
-            initialLoadData: function(){
-
+            toggleHandler: function(node){
+                var _dijit = this;
+                domClass.add(node, "hidden");
+                if(node == _dijit.get('showChildNode')){
+                    domClass.remove(_dijit.get('hideChildNode'), "hidden");
+                    domClass.remove(_dijit.get('companyClientsNode'), "hidden");
+                } else {
+                    domClass.remove(_dijit.get('showChildNode'), "hidden");
+                    domClass.add(_dijit.get('companyClientsNode'), "hidden");
+                }
             },
             // Загрузка списка клиентов сервера
-            fetchCompanyCliens: function(page){
+            fetchCompanyClients: function(page, offset){
                 return Ajax.load(
-                    'http://192.168.1.51/api/1/company/' + this.get('companyOwner').id + '/get-clients' , {
-                    overlay: this._overlayAjax
-                });
-            },
-            toggleUncoverCompanyClientsNodes: function(event){
-                query('span', event.target).forEach(function(spanNode){
-                    domClass.toggle(spanNode, "hidden");
-                });
-                domClass.toggle(this.get('companyClientsNode'), "hidden");
-            },
-            _getCompanyClientsData: function(){
-                return Ajax.load(
-                    'http://192.168.1.51/api/1/company/' + this.get('companyOwner').id + '/get-clients' , {
-                    overlay: this._overlayAjax
+                    Ajax.url('api/1/company/' + this.get('companyOwner').id + '/get-clients'), {
+                    overlay: this._overlayAjax,
+                    query: {page: page, offset: offset}
                 });
             },
             _companyClientsFilter: function(node){
@@ -295,7 +278,7 @@ ContentPane, _WidgetBase, _WidgetsInTemplateMixin, _Container, _Contained, _Temp
             _companyClientsFilterProcess: function(form){
                 var _dijit = this;
                 Ajax.load(
-                    'http://192.168.1.51/api/1/company/query' , {
+                    Ajax.url('api/1/company/query'), {
                     query: (function(){
                         var query = domForm.toObject(form);
                         delete query['send'];
@@ -368,7 +351,6 @@ ContentPane, _WidgetBase, _WidgetsInTemplateMixin, _Container, _Contained, _Temp
             }
         });
 
-
         // Компания Клиент
         var companyClientNode = declare("companyClientNode", [_WidgetBase, _Contained, _TemplatedMixin /*_WidgetsInTemplateMixin*/], {
             companyClient: null,
@@ -379,6 +361,15 @@ ContentPane, _WidgetBase, _WidgetsInTemplateMixin, _Container, _Contained, _Temp
                 if(!this.id) this.id = this.declaredClass + '_' + this.companyClient.id;
                 if(this.options && this.options.type == 'empty')
                 this.templateString = dom.byId('company-client-node-empty-template').innerHTML;
+
+
+            },
+            postCreate: function(){
+                if(this.get('getAgreementsNode')){
+                    on(this.get('getAgreementsNode'), 'click', function(){
+                        router.go('get-agreements');
+                    })
+                }
             },
             hide: function(){
                 domClass.add(this.domNode, "hidden");
@@ -390,38 +381,125 @@ ContentPane, _WidgetBase, _WidgetsInTemplateMixin, _Container, _Contained, _Temp
                 //this._getCreateAgreementContent();
                 var t = new createAgreement();
                 t.show();
-            },
-            _getCreateAgreementContent: function(){
-                var _dijit = this;
-                return Ajax.load(
-                    'http://192.168.1.51/manager/billing/create-agreement' , {
-                    query: {'company_owner': this.getParent().companyOwner.id},
-                    handleAs: 'text',
-                    overlay: new Overlay({
-                        domNode: window.document.body
-                    })
-                }).then(function(response){
-                    var dialog = new dijitDialog();
-                    dialog.set('content', response);
-                    dialog.show();
+            }
+
+        });
+
+        function clearContentPane(){
+            array.forEach(contentPane.getChildren(), function(dijit){
+                dijit.removeChild(dijit);
+            });
+        }
+
+        router.register('get-owners', function(event){
+            clearContentPane();
+            var ownersContentPane;
+            if(!dijitRegistry.byId(event.newPath)){
+                ownersContentPane = new ContentPane({
+                    id: event.newPath,
+                    style: {padding: 0, margin: 0}
                 });
+                array.forEach(companiesOwnersStore.data, function(item){
+                    ownersContentPane.addChild(new companyOwnerNode({companyOwner: item}));
+                });
+                ownersContentPane.startup();
+            } else {
+                ownersContentPane = dijitRegistry.byId(event.newPath);
+            }
+            contentPane.addChild(ownersContentPane);
+        });
+
+        // Роутер договоров
+        router.register('get-agreements', function(event){
+            clearContentPane();
+            var container;
+            if(!dijitRegistry.byId(event.newPath)){
+                container = new agreementsContainer({
+                    id: event.newPath,
+                    style: {padding: 0, margin: 0}
+                });
+                container.startup();
+                contentPane.addChild(container);
+            } else {
+                container = dijitRegistry.byId(event.newPath);
+            }
+            contentPane.addChild(container);
+        });
+
+        var agreementsContainer = declare("companyOwnerNode", [_WidgetBase, ContentPane, _TemplatedMixin], {
+            templateString: dom.byId('agreements-container-template').innerHTML,
+            agreementsStore: null,
+            data: null,
+            postMixInProperties: function(){
+                this.agreementsStore = new storeMemory();
+            },
+            buildRendering: function(){
+                this.inherited(arguments);
+                this.containerNode = this.get('agreementsNode');
+            },
+            postCreate: function(){
+                this._overlayAjax = new Overlay({
+                    domNode: this.domNode
+                });
+                var _dijit = this;
+                this.fetchAgreements(function(items){
+                    array.forEach(items, function(item){
+                        _dijit.insertAgreementNode(item);
+                    });
+                });
+            },
+            insertAgreementNode: function(item){
+                this.agreementsStore.add(item);
+                //if(dijitRegistry.byId(this._getCompanyClientId(item.id))) this.addChild(this._getCompanyClientId(item.id));
+                //else this.addChild(new companyClientNode({companyClient: item, id: this._getCompanyClientId(item.id), options: options}));
+                this.addChild(new agreementNode({data: item}));
+            },
+            fetchAgreements: function(callback){
+                var response = Ajax.load(
+                    Ajax.url('api/1/agreement/query'), {
+                    query: {'filters[equal][company_owner][]': 12, 'filters[equal][company_client][]': 12},
+                    overlay: this._overlayAjax
+                });
+                response.then(function(response){
+                    callback(response.data);
+                });
+                return response;
+            }
+        });
+
+        var agreementNode = declare("companyClientNode", [_WidgetBase, _Contained, _TemplatedMixin], {
+            templateString: dom.byId('agreement-node-template').innerHTML,
+            data: null,
+            linesStore: linesStore,
+            tariffsStore: null,
+            buildRendering: function(){
+                this.inherited(arguments);
+                console.log(this.data);
+/*                this.data['line'] = linesStore.get(this.data['line']).data.name;
+                this.data['tariff'] = tariffsStore.get(this.data['tariff']).data.name;*/
+                this.data.data['date_expires'] = Math.ceil((this.data['date_end'] - appConfig.serverTimestamp) / 86400);
+                this.data.data['date_begin'] = this.formatDate(this.data['date_begin']);
+                this.data.data['date_end'] = this.formatDate(this.data['date_end']);
+            },
+            test: function(){
+                return 'Hello';
+            },
+            postCreate: function(){
+
+            },
+            formatDate: function(dateValue){
+                dateValue = dateValue || 0;
+                var date = new Date(dateValue * 1000);
+                var dateFormat = {full: ''};
+                dateFormat.date = (date.getDate() > 9) ? date.getDate() : '0' + date.getDate();
+                dateFormat.month = (date.getMonth() + 1) > 9 ? (date.getMonth() + 1) : '0' + (date.getMonth() + 1);
+                dateFormat.year = date.getFullYear();
+                return dateFormat.full.concat(dateFormat.date, '.' + dateFormat.month, '.' + dateFormat.year);
             }
         });
 
 
-
-
-
-
-
-
-        var gs = [];
-        array.forEach(companiesOwnersStore.data, function(item){
-            var g = new companyOwnerNode({companyOwner: item});
-            g.placeAt('contentCompanies', 'last');
-            gs.push(g);
-        });
-
+// =====================================================================================================
 
         // Компания владелец
         var ownerWidget = function(refNode, ownerItem){
@@ -690,60 +768,8 @@ $this->headScript()->appendScript($jScript, $type = 'text/javascript')
 ?>
 <div id="contentCompanies"></div>
 
-<script id="company-owner-item" type="text/x-handlebars-template">
-    <table class="table table-bordered" id="company-owner-{{id}}">
-        <colgroup>
-            <col width="50"/>
-            <col width="650"/>
-            <col/>
-        </colgroup>
-        <thead>
-            <tr>
-                <td colspan="3">
-                    {{data.name}} ({{data.inn}} / {{data.kpp}})
-                </td>
-            </tr>
-        </thead>
-        <tfoot>
-            <tr>
-                <td colspan="3"><a class="toggle" data-params="companyOwner/{{id}}"><span class="toggle-show">развернуть</span><span class="hidden toggle-hide">свернуть</span></a></td>
-            </tr>
-        </tfoot>
-        <tbody class="hidden">
-            <tr>
-                <th>#ID</th>
-                <th>Контрагент</th>
-                <th><a data-action="addClient/{{id}}">+ добавить конрагента</a></th>
-            </tr>
-        </tbody>
-    </table>
-</script>
-
-<script id="company-client-item" type="text/x-handlebars-template">
-    <tr>
-        <td>{{id}}</td>
-        <td>
-            {{data.name}} ({{data.inn}} / {{data.kpp}})
-        </td>
-        <td>
-            <a data-action="getAgreements/{{companyOwner}}/{{id}}">см. договора</a>
-        </td>
-    </tr>
-</script>
-
-<script id="company-add-client" type="text/x-handlebars-template">
-    <tr>
-        <td>{{id}}</td>
-        <td>
-            {{data.name}} ({{data.inn}} / {{data.kpp}})
-        </td>
-        <td>
-            <a>+ новый договор</a> <a>договора</a>
-        </td>
-    </tr>
-</script>
-
-<script id="tpl-agreements-container" type="text/x-handlebars-template">
+<script id="agreements-container-template" type="text">
+<div>
     <table class="table table-bordered" id="agreements-container">
         <colgroup>
             <col width="50"/>
@@ -770,24 +796,25 @@ $this->headScript()->appendScript($jScript, $type = 'text/javascript')
         <tfoot>
         <tr>
             <td colspan="8">
-                <button type="button" data-action="addAgreement/{{company_owner}}/{{company_client}}">Новый договор</button>
+                <button type="button" data-dojo-attach-point="createAgreement" data-action="addAgreement/{{company_owner}}/{{company_client}}">Новый договор</button>
             </td>
         </tr>
         </tfoot>
-        <tbody></tbody>
+        <tbody data-dojo-attach-point="agreementsNode"></tbody>
     </table>
+</div>
 </script>
 
-<script id="tpl-agreement-item" type="text/x-handlebars-template">
+<script id="agreement-node-template" type="text">
     <tr id="agreement-item-{{id}}">
-        <td>{{id}}</td>
-        <td>{{data.invoice}}</td>
-        <td></td>
-        <td>{{tariffInfo data.tariff}}</td>
-        <td>{{dateFormat data.date_begin}}</td>
-        <td>{{dateFormat data.date_end}}</td>
-        <td>{{dateExpires data.date_end}}</td>
-        <td>просмотр</td>
+        <td>${data.id}</td>
+        <td>#${data.data.invoice}</td>
+        <td>${test()}</td>
+        <td>$_{data.tariff}</td>
+        <td>${data.data.date_begin}</td>
+        <td>${data.data.date_end}</td>
+        <td>$_{date_expires}</td>
+        <td><a href="<?=$this->baseUrl('manager/billing/agreement/id/');?>${data.id}">просмотр</a></td>
     </tr>
 </script>
 
@@ -805,7 +832,7 @@ $this->headScript()->appendScript($jScript, $type = 'text/javascript')
         <td>${companyClient.data.name}</td>
         <td>${companyClient.data.inn}</td>
         <td>${companyClient.data.kpp}</td>
-        <td><a data-dojo-attach-event="onclick: createAgreement">см. договора</a></td>
+        <td><a data-dojo-attach-point="getAgreementsNode">см. договора</a></td>
     </tr>
 </script>
 
@@ -837,13 +864,11 @@ $this->headScript()->appendScript($jScript, $type = 'text/javascript')
             </tr>
         </thead>
         <tfoot>
-            <tr>
+            <tr data-dojo-attach-point="toggleChildNodes">
                 <td colspan="5">
-                    <button type="button" data-dojo-attach-point="uncoverCompanyClientsNodes"><span class="toggle-show">&darr; развернуть</span><span class="toggle-hide hidden">&uarr; свернуть</span></button>
-            </tr>
-            <tr>
-                <button type="button" data-dojo-attach-point="showChildNode" data-dojo-attach-event="onclick: toggle" type="button">&darr; развернуть</button>
-                <button type="button" data-dojo-attach-point="hideChildNode" data-dojo-attach-event="onclick: toggle" type="button" class="hidden">&uarr; свернуть</button>
+                    <button type="button" data-dojo-attach-point="showChildNode">&darr; развернуть</button>
+                    <button type="button" data-dojo-attach-point="hideChildNode" type="button" class="hidden">&uarr; свернуть</button>
+                </td>
             </tr>
         </tfoot>
         <tbody class="hidden" data-dojo-attach-point="companyClientsNode">
